--- a/epaper.css
+++ b/epaper.css
@@ -51,10 +51,20 @@ body{
     color: #f0f0f0;
     font-size: 24px;
     font-family: 'segoe ui';
-    padding-left: 105px;
-    padding-right: 105px;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.link02{
+    text-decoration: none;
+    color: #f0f0f0;
+    font-size: 24px;
+    font-family: 'segoe ui';
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 /* .link02{
     text-decoration: none;
@@ -68,7 +78,7 @@ body{
 } */
 .logbox{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 .butt{
     position: relative;
