--- a/epaper.css
+++ b/epaper.css
@@ -39,14 +39,21 @@ body{
     font-size: 35px;
     color: #f0f0f0;
 }
+.imglink{
+    width: 200px;
+    text-decoration: none;
+    color: #f0f0f0;
+    font-size: 24px;
+    font-family: 'segoe ui';
+}
 .link{
     text-decoration: none;
     color: #f0f0f0;
     font-size: 24px;
     font-family: 'segoe ui';
-    padding: 35px;
+    padding: 25px;
 }
-.link01{
+/* .link01{
     text-decoration: none;
     color: #f0f0f0;
     font-size: 24px;
@@ -55,7 +62,7 @@ body{
     padding-right: 60px;
     padding-top: 15px;
     padding-bottom: 15px;
-}
+} */
 .link02{
     text-decoration: none;
     color: #f0f0f0;
