--- a/hthelper.css
+++ b/hthelper.css
@@ -2,15 +2,40 @@ body,html{
     height: 100%;
     width: 100%;
     margin: 0;
+    overflow: hidden;
 }
 body{
-    background-color: rgb(29, 40, 58);
     margin-top: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    background: none; /* Remove the background color */
 }
+
+.video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    overflow: hidden;
+}
+
+#bg-video {
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: no-repeat;
+    background-size: cover;
+}
+
 
 .head{
     position: fixed;
@@ -22,7 +47,7 @@ body{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: rgb(10, 14, 20);
+    background-color: rgba(10, 14, 20, 0.459);
     z-index: 100;
     background-origin: border-box;
     background-repeat: no-repeat;
@@ -42,15 +67,15 @@ body{
 .link{
     text-decoration: none;
     color: #f0f0f0;
-    font-size: 24px;
-    font-family: 'segoe ui';
+    font-size: 30px;
+    font-family: 'zain';
     padding: 35px;
 }
 .link01{
     text-decoration: none;
     color: #f0f0f0;
-    font-size: 24px;
-    font-family: 'segoe ui';
+    font-size: 30px;
+    font-family: 'zain';
     padding-left: 105px;
     padding-right: 105px;
     padding-top: 25px;
@@ -59,8 +84,8 @@ body{
 .link02{
     text-decoration: none;
     color: #f0f0f0;
-    font-size: 24px;
-    font-family: 'segoe ui';
+    font-size: 30px;
+    font-family: 'zain';
     padding-left: 70px;
     padding-right: 70px;
     padding-top: 15px;
@@ -93,7 +118,7 @@ body{
     height: 100%;
     width: 100%;
     position: absolute;
-    background-image: linear-gradient(to bottom right,red, blue);
+    background-image: linear-gradient(to bottom right,rgb(255, 174, 0),white, rgb(42, 212, 0));
     border-radius: 1000px;
     z-index: -1;
     padding: 5px;
@@ -101,9 +126,20 @@ body{
 }
 .butt:hover{
     z-index: 0;
-    box-shadow: 30px 0 100px #ff0000d3, -30px 0 100px #0000ffc9;
-}
+    box-shadow: 30px 0 100px rgb(255, 154, 51), -30px 0 100px rgb(15, 112, 4);
 
+}
+.link, .link01, .link02 {
+    transition: color 0.25s;
+    -webkit-transition: color 0.25s;
+    -moz-transition: color 0.25s;
+    -ms-transition: color 0.25s;
+    -o-transition: color 0.25s;
+}
+.link:hover, .link01:hover, .link02:hover{
+    color: blue;
+    font-weight: bolder;
+}
 .credit{
     position: fixed;
     bottom: 0;
