--- a/epaper.css
+++ b/epaper.css
@@ -2,38 +2,14 @@ body,html{
     height: 100%;
     width: 100%;
     margin: 0;
-    overflow: hidden;
 }
 body{
+    background-color: rgb(29, 40, 58);
     margin-top: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    background: none; /* Remove the background color */
-}
-
-.video-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    overflow: hidden;
-}
-
-#bg-video {
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: no-repeat;
-    background-size: cover;
 }
 
 .head{
@@ -46,7 +22,7 @@ body{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: rgba(10, 14, 20, 0.459);
+    background-color: rgb(10, 14, 20);
     z-index: 100;
     background-origin: border-box;
     background-repeat: no-repeat;
@@ -70,120 +46,43 @@ body{
     font-size: 24px;
     font-family: 'segoe ui';
 }
-.imglink2{
-    width: 200px;
-    text-decoration: none;
-    color: #f0f0f0;
-    font-size: 24px;
-    font-family: 'segoe ui';
-    padding: 22px;
-    transition: content 0.25s;
-}
-.imglink3{
-    width: 200px;
-    text-decoration: none;
-    color: #f0f0f0;
-    font-size: 24px;
-    padding: 22px;
-    font-family: 'segoe ui';
-    transition: content 0.25s;
-}
-.imglink3:hover{
-    content: url(altlogo/dainik-bhaskar-logo-logo-blue.png);
-}
-.imglink4{
-    width: 200px;
-    text-decoration: none;
-    color: #f0f0f0;
-    font-size: 24px;
-    font-family: 'segoe ui';
-    padding: 22px;
-    transition: content 0.25s;
-}
-.imglink4:hover{
-    content: url(altlogo/prabhat_khabar-blue.png);
-}
-.imglink5{
-    width: 200px;
-    text-decoration: none;
-    color: #f0f0f0;
-    font-size: 24px;
-    font-family: 'segoe ui';
-    padding: 18px;
-    transition: content 0.25s;
-}
-.imglink5:hover{
-    content: url(altlogo/TOI-blue.png);
-}
-.imglink6{
-    width: 200px;
-    text-decoration: none;
-    color: #f0f0f0;
-    font-size: 24px;
-    font-family: 'segoe ui';
-    padding: 35px;
-    transition: content 0.25s;
-}
-.imglink7{
-    width: 200px;
-    text-decoration: none;
-    color: #f0f0f0;
-    font-size: 24px;
-    padding: 20px;
-    font-family: 'segoe ui';
-    transition: content 0.25s;
-}
-.imglink7:hover{
-    content: url(altlogo/eco-times-blue.png);
-}
-.imglink8{
-    width: 200px;
-    text-decoration: none;
-    color: #f0f0f0;
-    font-size: 24px;
-    padding: 3px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 12px;
-    font-family: 'segoe ui';
-    transition: content 0.25s;
-}
-.imglink8:hover{
-    content: url(altlogo/Hindustan-Times-Logo-blue.png);
-}
 .link{
     text-decoration: none;
     color: #f0f0f0;
-    font-size: 30px;
-    font-family: 'zain';
-    padding: 35px;
+    font-size: 24px;
+    font-family: 'segoe ui';
+    padding: 25px;
 }
-.link06{
+/* .link01{
     text-decoration: none;
     color: #f0f0f0;
-    font-size: 30px;
-    font-family: 'zain';
-}
-.link01{
-    text-decoration: none;
-    color: #f0f0f0;
-    font-size: 30px;
-    font-family: 'zain';
-    padding-left: 105px;
-    padding-right: 105px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-}
+    font-size: 24px;
+    font-family: 'segoe ui';
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+} */
 .link02{
     text-decoration: none;
     color: #f0f0f0;
-    font-size: 30px;
-    font-family: 'zain';
-    padding-left: 70px;
-    padding-right: 70px;
+    font-size: 24px;
+    font-family: 'segoe ui';
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+/* .link02{
+    text-decoration: none;
+    color: #f0f0f0;
+    font-size: 24px;
+    font-family: 'segoe ui';
+    padding-left: 80px;
+    padding-right: 80px;
     padding-top: 15px;
     padding-bottom: 15px;
-}
+} */
 .logbox{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -211,7 +110,7 @@ body{
     height: 100%;
     width: 100%;
     position: absolute;
-    background-image: linear-gradient(to bottom right,rgb(255, 174, 0),white, rgb(42, 212, 0));
+    background-image: linear-gradient(to bottom right,red, blue);
     border-radius: 1000px;
     z-index: -1;
     padding: 5px;
@@ -219,28 +118,9 @@ body{
 }
 .butt:hover{
     z-index: 0;
-    box-shadow: 30px 0 100px rgb(255, 154, 51), -30px 0 100px rgb(15, 112, 4);
+    box-shadow: 30px 0 100px #ff0000d3, -30px 0 100px #0000ffc9;
+}
 
-}
-.link, .link01, .link02 {
-    transition: color 0.25s;
-    -webkit-transition: color 0.25s;
-    -moz-transition: color 0.25s;
-    -ms-transition: color 0.25s;
-    -o-transition: color 0.25s;
-}
-.link:hover, .link01:hover, .link02:hover{
-    color: blue;
-    font-weight: bolder;
-}
-.imglink2:hover{
-    content: url(altlogo/jagran-logo-blue.png);
-    opacity: 1;
-}
-.imglink6:hover{
-    content: url(altlogo/Amar_Ujala_Logo-blue.png);
-    opacity: 1;
-}
 .credit{
     position: fixed;
     bottom: 0;
